--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1586,6 +1586,11 @@ input, select, textarea {
 
 /* Image */
 
+	img {
+		height: auto;
+		max-width: 100%
+	}
+
 	.image {
 		display: inline-block;
 	}
